data integrity checks for files extracted to its own implementation for clean code and less duplication. Test rewritten.